feat(worker-services) :implement get worker service
