# internal/core/dto/worker_service.go
@@ -5,3 +5,9 @@ type CreateWorkerServiceRequest struct {
 	Service  string  `json:"service" validate:"required"`
 	Price    float64 `json:"price" validate:"required"`
 }
+
+type WorkerServiceResponse struct {
+	ID      uint64  `json:"id"`
+	Service string  `json:"service"`
+	Price   float64 `json:"price"`
+}
